--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             margin: 0 auto;
         }
     </style>
+    <script
+src='//in.fw-cdn.com/30003745/2511.js'
+chat='true'>
+</script>
 </head>
 <body>
 
