--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ chat='true'>
     <!-- Web Form -->
     <div class="form-container">
         <h2>Contact Us</h2>
-        <form id="contact-form">
+        <form>
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" required>
