--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@ chat='true'>
         </div>
     </div>
 
+    <div id="second div">
+        New content
+    <a href="freshworks.com">
+    </div>
+
     <!-- Web Form -->
     <div class="form-container">
         <h2>Contact Us</h2>
