--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ chat='true'>
 
     <div id="second div">
         New content
-    <a href="freshworks.com">
+    <a href="freshworks.com"></a>
     </div>
 
     <!-- Web Form -->
