--- a/index.html
+++ b/index.html
@@ -100,6 +100,26 @@ chat='true'>
         </form>
     </div>
 
+    <!-- Web Form -->
+    <div class="form-container">
+        <h2>Contact Us</h2>
+        <form>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="mobile">Mobile</label>
+                <input type="tel" id="mobile" name="mobile" required>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+
     <script>
         // Function to dynamically load content
         function loadDynamicContent() {
